# cmake_poc

./: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/lib1/: CMakeLists.txt  lib1.cpp  lib1.hpp
